--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.5"
+    "react-router-dom": "^6.18.0",
+    "react-youtube": "^10.1.0",
+    "tailwindcss": "^3.3.5",
+    "vite-plugin-svgr": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
