--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18n-iso-countries": "^7.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-router-dom": "^6.18.0",
     "react-youtube": "^10.1.0",
     "tailwindcss": "^3.3.5",
